# wcnt

./: .gitignore  3extra.wc  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  announce.txt  config.cache  config.h  config.h.in  config.status  configure  configure.in  demo1.wc  demo1v2.wc  demo1v3.wc  demo2.wc  demo3.wc  demo4.wc  demo5random.wc  demo5random2.wc  failed_disk.patch  ladspa_notes  libtool  sed_insert_get_ui_items_method_cmdline  sweep1.wc  sweep2.wc  wcnt.prj  wcnt.prj.bak  wcnt.pws
doc/: QAREADME  sampler.txt
examples/: README  adsrtest02.wc  ambipure01.wc  ambipure02.wc  basics01.wc  basics02.wc  basics03.wc  basics04-dc.wc  basics04.wc  bass01.wc  bass02.wc  bass22-shift.wc  bass22.wc  blam001.wc  crappy02.wc  crappy03.wc  crappy03a.wc  cratty01.wc  cratty02.wc  cratty03.wc  dasic01.wc  dasic02.wc  dasic03.wc  dasifierx01.wc  derf01.wc  derf02.wc  derfedx01.wc  derfedx06.wc  derfedx07.wc  derfedx08.wc  derfedx09.wc  derfedx10.wc  drop_check.wc  drumloop01.wc  drumloop02.wc  drumloop03.wc  drumloop032.wc  drumloopII01.wc  drums-tz-01.wc  drums-tz-01b.wc  (+110 more)
help_files/: README  adsr.txt  clock.txt  constant.txt  constant_freq.txt  constant_note.txt  freq_generator.txt  lfo_clock.txt  lfo_controler.txt  lp_filter.txt  modifier.txt  noise_generator.txt  nonezero.txt  osc_clock.txt  sample_hold.txt  sequencer.txt  sine_wave.txt  square_wave.txt  stereo_amp.txt  tri_wave.txt  trigger.txt  wave.txt  wave_phase.txt
include/: Makefile  Makefile.am  Makefile.in  adder.h  adsr.h  adsr_scaler.h  adsrcoord.h  balance.h  bode_freq_shifter.h  boolfuncobj.h  bpmchange.h  caps_plate.h  caps_plate2x2.h  checkvalue.h  clockclock.h  cmdline.h  combiner.h  connector.h  connectorlist.h  constant_freq  constant_freq.h  constant_note.h  constmod.h  contraster.h  conversions.h  copier.h  cosinewave.h  dataobjects.h  dc_filter.h  dc_offset_remover.h  delay.h  difffilter.h  dobj.h  dobj_copier.h  dobjdobj.h  dobjdobjlist.h  dobjlist.h  dobjmod.h  dobjnamedobj.h  dobjnames.h  (+156 more)
misc/: edit_dobjs_cc  edit_dobjs_h  edit_modules_cc  edit_modules_h  lensel.cc  nt.cc
scripts/: name_usage
src/: Makefile  Makefile.am  Makefile.in  adder.cc  adsr.cc  adsr_scaler.cc  adsrcoord.cc  balance.cc  bode_freq_shifter.cc  bpmchange.cc  caps_plate.cc  caps_plate2x2.cc  checkvalue.cc  clockclock.cc  cmdline.cc  combiner.cc  connector.cc  connectorlist.cc  constant_freq.cc  constant_note.cc  constmod.cc  contraster.cc  conversions.cc  copier.cc  cosinewave.cc  dc_filter.cc  dc_offset_remover.cc  delay.cc  difffilter.cc  dobj.cc  dobjdobj.cc  dobjdobjlist.cc  dobjlist.cc  dobjmod.cc  dobjnamedobj.cc  dobjnames.cc  dobjparam.cc  dobjparamlist.cc  dparnames.cc  dtr.cc  (+138 more)
src/.deps/: adsr.P  adsrcoord.P  bpmchange.P  clockclock.P  combiner.P  connector.P  connectorlist.P  constmod.P  contraster.P  conversions.P  dc_filter.P  delay.P  dobj.P  dobjdobj.P  dobjdobjlist.P  dobjlist.P  dobjmod.P  dobjnames.P  dobjparam.P  dobjparamlist.P  dparnames.P  dtr.P  dynamic.P  dynvertex.P  echo.P  freqgenerator.P  highpassfilter.P  inputnames.P  iocat.P  jwmsynth.P  lfoclock.P  lfocontroller.P  linkedlist.P  logictrigger.P  lowpassfilter.P  main.P  meterchange.P  moddobj.P  moddobjlist.P  modifier.P  (+48 more)
test_wcs/: combinertest.wc  error.wch  errortest.wc  notetester.wc  sine.wc  small.wc  test.wc  tester.wc  time.wch
tests/: adsr.wc  adsr_minimal.wc  combiner.wc  combiner2.wc  combiner_output.wc  copier.wc  echo.wc  edit.wc  errors.wc  fader.wc  granulardrumloop.wc  header.wch  ladspa-leak-test.wc  ladspa.wc  ladspa_min.wc  lfo_controller.wc  mixer.wc  mixer2.wc  notes.wc  optional.wc  optional_item_param_edit.wc  optional_item_param_edit1.wc  optional_item_param_edit2.wc  orbit.wc  pattern_trig.wc  price_crash_ladspa_generic.wc  revb.wc  reverb.wc  sampler.wc  seq_echo.wc  seq_echo_echo_routed.wc  seq_echo_routed.wc  serial_wavout.wc  simple.wc  square.wc  stereo_amp.wc  switcher.wc  tenminutesine.wc  test.wc  time_map.wc  (+9 more)
