## Process this file with automake to produce Makefile.in
## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## Please disable it in the Anjuta project configuration
## well i imported this project so I have to edit it manually
## and I dont think anjuta will overwrite it in this case

wcnt_includedir = $(pkgincludedir)

wcnt_include_DATA = \
	adsr.h\
	adsrcoord.h\
	clockclock.h\
	conversions.h\
	inputnames.h\
	iocat.h\
	lfoclock.h\
	lfocontroller.h\
	linkedlist.h\
	filtercommon.h\
	lowpassfilter.h\
	modinput.h\
	modinputslist.h\
	modoutput.h\
	modoutputslist.h\
	noisegenerator.h\
	nonezero.h\
	notedata.h\
	oscclock.h\
	outputnames.h\
	riffdata.h\
	sampler.h\
	sequencer.h\
	sinewave.h\
	squarewave.h\
	stereoamp.h\
	stereochannel.h\
	stereomixer.h\
	synthmodnames.h\
	synthmodule.h\
	wavfileheader.h\
	wavfilein.h\
	wavfileout.h\
	dtr.h\
	synthfilereader.h\
	constmod.h\
	freqgenerator.h\
	modifier.h\
	samplehold.h\
	trigger.h\
	trianglewave.h\
	trianglewave2.h\
	userwave.h\
	userwavevertex.h\
	connector.h\
	synthmodulelist.h\
	modules.h\
	jwmsynth.h\
	connectorlist.h\
	paramnames.h\
	modparam.h\
	modparamlist.h\
	randomtrigger.h\
	logictrigger.h\
	switcher.h\
	wcntsignal.h\
	highpassfilter.h\
	combiner.h\
	bpmchange.h\
        meterchange.h\
	timemap.h\
	sampledata.h\
	riffnode.h\
	delay.h\
	echo.h\
	monoamp.h\
	wcntmodule.h\
	multiplier.h\
	rangelimit.h\
	pan.h\
	rms.h\
	dc_filter.h\
	dataobjects.h\
	dobj.h\
	dobjlist.h\
	dobjnames.h\
	dobjparam.h\
	dobjparamlist.h\
	dparnames.h\
	moddobj.h\
	moddobjlist.h
	dobjdobj.h\
	dobjdobjlist.h\
	dobjmod.h\
	dynvertex.h\
	dynamic.h\
	spreader.h\
	notetran.h
	
EXTRA_DIST = $(wcnt_include_DATA)
