## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

CXXFLAGS =\
	 -Wall -Wimplicit -Wreturn-type -Wunused -Wswitch -Wcomment -Wuninitialized -Wparentheses -Wtraditional -Wpointer-arith -Wmissing-prototypes\
	 -O1\
	 -g

bin_PROGRAMS = wcnt

wcnt_SOURCES = \
	adsr.cc\
	adsrcoord.cc\
	clockclock.cc\
	conversions.cc\
	dtr.cc\
	inputnames.cc\
	lfoclock.cc\
	lfocontroller.cc\
	linkedlist.cc\
	lowpassfilter.cc\
	main.cc\
	modinput.cc\
	modinputslist.cc\
	modoutput.cc\
	modoutputslist.cc\
	noisegenerator.cc\
	nonezero.cc\
	notedata.cc\
	oscclock.cc\
	outputnames.cc\
	riffdata.cc\
	sampler.cc\
	sequencer.cc\
	sinewave.cc\
	squarewave.cc\
	stereoamp.cc\
	stereochannel.cc\
	stereomixer.cc\
	synthmodnames.cc\
	synthmodule.cc\
	wavfileheader.cc\
	wavfilein.cc\
	wavfileout.cc\
	synthfilereader.cc\
	rifflist.cc\
	constmod.cc\
	freqgenerator.cc\
	modifier.cc\
	samplehold.cc\
	trigger.cc\
	trianglewave.cc\
	trianglewave2.cc\
	userwave.cc\
	userwavevertex.cc\
	connector.cc\
	synthmodulelist.cc\
	jwmsynth.cc\
	paramnames.cc\
	connectorlist.cc\
	modparam.cc\
	modparamlist.cc\
	wavfileinlist.cc\
	randomtrigger.cc\
	logictrigger.cc\
	switcher.cc\
	wcntsignal.cc\
	highpassfilter.cc\
	combiner.cc

wcnt_LDFLAGS = 

wcnt_LDADD = 

