## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## Please disable it in the Anjuta project configuration

## project was imported so anjuta won't actually overwrite it


INCLUDES =

CXXFLAGS =\
## define this when you don't wont to compile the user interface code
## usefull for testing modules
##   -DBARE_MODULES\
	 -Wall -Wimplicit -Wreturn-type -Wunused -Wswitch -Wcomment -Wuninitialized -Wparentheses -Wtraditional -Wpointer-arith -Wmissing-prototypes\
	 -O3\
         -ffast-math\
	 -g

bin_PROGRAMS = wcnt

wcnt_SOURCES = \
	adsr.cc\
	adsrcoord.cc\
	clockclock.cc\
	conversions.cc\
	dtr.cc\
	inputnames.cc\
	lfoclock.cc\
	lfocontroller.cc\
	linkedlist.cc\
	lowpassfilter.cc\
	main.cc\
	modinput.cc\
	modinputslist.cc\
	modoutput.cc\
	modoutputslist.cc\
	noisegenerator.cc\
	nonezero.cc\
	notedata.cc\
	oscclock.cc\
	outputnames.cc\
	riffdata.cc\
	sampler.cc\
	sequencer.cc\
	sinewave.cc\
	squarewave.cc\
	stereoamp.cc\
	stereochannel.cc\
	stereomixer.cc\
	synthmodnames.cc\
	synthmodule.cc\
	wavfileheader.cc\
	wavfilein.cc\
	wavfileout.cc\
	synthfilereader.cc\
	rifflist.cc\
	constmod.cc\
	freqgenerator.cc\
	modifier.cc\
	samplehold.cc\
	trigger.cc\
	trianglewave.cc\
	trianglewave2.cc\
	userwave.cc\
	userwavevertex.cc\
	connector.cc\
	synthmodulelist.cc\
	jwmsynth.cc\
	paramnames.cc\
	connectorlist.cc\
	modparam.cc\
	modparamlist.cc\
	wavfileinlist.cc\
	randomtrigger.cc\
	logictrigger.cc\
	switcher.cc\
	wcntsignal.cc\
	highpassfilter.cc\
	combiner.cc\
	bpmchange.cc\
	meterchange.cc\
	timemap.cc\
	riffnode.cc\
	serialwavfileout.cc\
	contraster.cc\
	delay.cc\
	echo.cc\
	monoamp.cc\
	wcntmodule.cc\
	multiplier.cc\
	rangelimit.cc\
	pan.cc\
	rms.cc\
	dc_filter.cc
	
wcnt_LDFLAGS = 

wcnt_LDADD =
