## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## Please disable it in the Anjuta project configuration

## project was imported so anjuta won't actually overwrite it

## add -DBARE_MODULES\ below after CXXFLAGS, when you don't 
## wont to compile all that nasty user interface code..
## usefull for testing modules and quickens compilation time


INCLUDES =

CXXFLAGS =\
	 -Wall -Wimplicit -Wreturn-type -Wunused -Wswitch -Wcomment -Wuninitialized -Wparentheses -Wpointer-arith -Wmissing-prototypes\
	 -O3

bin_PROGRAMS = wcnt

wcnt_SOURCES = \
	adsr.cc\
	adsrcoord.cc\
	clockclock.cc\
	conversions.cc\
	dtr.cc\
	inputnames.cc\
	iocat.cc\
	lfoclock.cc\
	lfocontroller.cc\
	linkedlist.cc\
	lowpassfilter.cc\
	main.cc\
	modinput.cc\
	modinputslist.cc\
	modoutput.cc\
	modoutputslist.cc\
	noisegenerator.cc\
	nonezero.cc\
	notedata.cc\
	oscclock.cc\
	outputnames.cc\
	riffdata.cc\
	sampler.cc\
	sequencer.cc\
	sinewave.cc\
	squarewave.cc\
	stereoamp.cc\
	stereochannel.cc\
	stereomixer.cc\
	synthmodnames.cc\
	synthmodule.cc\
	wavfileheader.cc\
	wavfilein.cc\
	wavfileout.cc\
	synthfilereader.cc\
	constmod.cc\
	freqgenerator.cc\
	modifier.cc\
	samplehold.cc\
	trigger.cc\
	trianglewave.cc\
	trianglewave2.cc\
	userwave.cc\
	userwavevertex.cc\
	connector.cc\
	synthmodulelist.cc\
	jwmsynth.cc\
	paramnames.cc\
	connectorlist.cc\
	modparam.cc\
	modparamlist.cc\
	randomtrigger.cc\
	logictrigger.cc\
	switcher.cc\
	wcntsignal.cc\
	highpassfilter.cc\
	combiner.cc\
	bpmchange.cc\
	meterchange.cc\
	timemap.cc\
	sampledata.cc\
	riffnode.cc\
	serialwavfileout.cc\
	contraster.cc\
	delay.cc\
	echo.cc\
	monoamp.cc\
	wcntmodule.cc\
	multiplier.cc\
	rangelimit.cc\
	pan.cc\
	rms.cc\
	dc_filter.cc\
	dobj.cc\
	dobjlist.cc\
	dobjnames.cc\
	dobjparam.cc\
	dobjparamlist.cc\
	dparnames.cc\
	moddobj.cc\
	moddobjlist.cc\
	dobjdobj.cc\
	dobjdobjlist.cc\
	dobjmod.cc\
	dynvertex.cc\
	dynamic.cc\
	spreader.cc\
	notetran.cc
		
wcnt_LDFLAGS = 

wcnt_LDADD =
